# corecomb

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
corecomb/: __init__.py  corecomb.py
img/: logo.psd
notebooks/: acpP_njtree.nwk  baseline.ipynb  core_gene_alignment.xmfa  core_gene_test_cfml.ML_sequence.fasta  core_gene_test_cfml.em.txt  core_gene_test_cfml.filtered.fasta  core_gene_test_cfml.importation_status.txt  core_gene_test_cfml.labelled_tree.newick  core_gene_test_cfml.position_cross_reference.txt  core_gene_test_clean_cfml.ML_sequence.fasta  core_gene_test_clean_cfml.em.txt  core_gene_test_clean_cfml.filtered.fasta  core_gene_test_clean_cfml.labelled_tree.newick  core_gene_test_clean_cfml.position_cross_reference.txt
test/data/: pan_genome_reference.fa
test/data/aligned_gene_sequences_clean/: acpP.aln.fas
test/data/aligned_gene_sequences_raw/: acpP.aln.fas  atpF.aln.fas
tests/: test_corecomb.py
tests/data/aligned_gene_sequences_clean/: atpE.aln.fas  atpF.aln.fas
tests/data/aligned_gene_sequences_raw/: atpE.aln.fas
tests/data/output/: corecomb.xmfa
