[tool.poetry]
name = "corecomb"
version = "0.1.0"
description = ""
authors = ["maxibor <maxime_borry@eva.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pysam = "^0.22.0"
rich-click = "^1.7.3"
pytest = "^8.0.0"

[tool.poetry.scripts]
corecomb = 'corecomb.__init__:create_xmfa'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
